--- a/TubumuMeeting.Mediasoup/TubumuMeeting.Mediasoup.csproj
+++ b/TubumuMeeting.Mediasoup/TubumuMeeting.Mediasoup.csproj
@@ -9,6 +9,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <NoWarn>1701;1702;8618</NoWarn>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.3" />
   </ItemGroup>
