--- a/TubumuMeeting.Web/appsettings.json
+++ b/TubumuMeeting.Web/appsettings.json
@@ -6,5 +6,15 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "TokenValidationSettings": {
+    "ValidIssuer": "issuer",
+    "ValidAudience": "audience",
+    "IssuerSigningKey": "tubumuhelloworld",
+    "ValidateLifetime": false,
+    "ClockSkewSeconds": 300,
+    "ExpiresSeconds": 2592000,
+    "RefreshTokenExpiresSeconds": 600,
+    "LoginUrl": "/login"
+  }
 }
