--- a/TubumuMeeting.AspNetCore.Mediasoup/TubumuMeeting.AspNetCore.Mediasoup.csproj
+++ b/TubumuMeeting.AspNetCore.Mediasoup/TubumuMeeting.AspNetCore.Mediasoup.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -18,6 +18,7 @@
   
   <ItemGroup>
     <ProjectReference Include="..\TubumuMeeting.Mediasoup\TubumuMeeting.Mediasoup.csproj" />
+    <ProjectReference Include="..\TubumuMeeting.Meeting\TubumuMeeting.Meeting.csproj" />
     <ProjectReference Include="..\TubumuMeeting.Libuv\TubumuMeeting.Libuv.csproj" />
   </ItemGroup>
 </Project>
