--- a/TubumuMeeting.Web/TubumuMeeting.Web.csproj
+++ b/TubumuMeeting.Web/TubumuMeeting.Web.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -6,8 +6,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.3" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Redis" Version="2.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\TubumuMeeting.Mediasoup\TubumuMeeting.Mediasoup.csproj" />
     <ProjectReference Include="..\TubumuMeeting.AspNetCore.Mediasoup\TubumuMeeting.AspNetCore.Mediasoup.csproj" />
+    <ProjectReference Include="..\TubumuMeeting.Meeting\TubumuMeeting.Meeting.csproj" />
   </ItemGroup>
 
 </Project>
