--- a/TubumuMeeting.Mediasoup/TubumuMeeting.Mediasoup.csproj
+++ b/TubumuMeeting.Mediasoup/TubumuMeeting.Mediasoup.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.3" />
+    <PackageReference Include="Nito.AsyncEx.Coordination" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
