--- a/tubumumeeting-client/package.json
+++ b/tubumumeeting-client/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service --https true serve ",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
@@ -12,6 +12,7 @@
     "core-js": "^3.6.4",
     "element-ui": "^2.4.5",
     "mediasoup-client": "^3.6.5",
+    "querystring": "^0.2.0",
     "vue": "^2.6.11",
     "vue-loader": "^15.9.1",
     "vue-template-compiler": "^2.6.11"
