--- a/TubumuMeeting.Meeting.Web/Properties/launchSettings.json
+++ b/TubumuMeeting.Meeting.Web/Properties/launchSettings.json
@@ -18,11 +18,10 @@
     "TubumuMeeting.Meeting.Web": {
       "commandName": "Project",
       "launchBrowser": false,
-      "applicationUrl": "https://192.168.1.124:5001;http://192.168.1.124:5000",
+      "applicationUrl": "https://192.168.18.233:5001",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "applicationUrl": "http://localhost:5000"
+      }
     }
   }
 }
