--- a/TubumuMeeting.Mediasoup.Common/TubumuMeeting.Mediasoup.Common.csproj
+++ b/TubumuMeeting.Mediasoup.Common/TubumuMeeting.Mediasoup.Common.csproj
@@ -17,4 +17,7 @@
     <ProjectReference Include="..\TubumuMeeting.Core\TubumuMeeting.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DirectTransport\" />
+  </ItemGroup>
 </Project>
