--- a/tubumumeeting-client/package.json
+++ b/tubumumeeting-client/package.json
@@ -18,11 +18,11 @@
         "vue-template-compiler": "^2.6.11"
     },
     "devDependencies": {
-        "@vue/cli-plugin-babel": "~4.3.0",
-        "@vue/cli-plugin-eslint": "~4.3.0",
-        "@vue/cli-service": "~4.3.0",
+        "@vue/cli-plugin-babel": "~4.4.0",
+        "@vue/cli-plugin-eslint": "~4.4.0",
+        "@vue/cli-service": "~4.4.0",
         "babel-eslint": "^10.1.0",
-        "eslint": "^6.7.2",
+        "eslint": "7.2.0",
         "eslint-plugin-vue": "^6.2.2"
     },
     "eslintConfig": {
