--- a/TubumuMeeting.Meeting.Web/appsettings.json
+++ b/TubumuMeeting.Meeting.Web/appsettings.json
@@ -10,7 +10,7 @@
   "TokenValidationSettings": {
     "ValidIssuer": "issuer",
     "ValidAudience": "audience",
-    "IssuerSigningKey": "tubumumeetinghelloworld",
+    "IssuerSigningKey": "tubumuhelloworld",
     "ValidateLifetime": false,
     "ClockSkewSeconds": 300,
     "ExpiresSeconds": 2592000,
