移除 TubumuMeeting.Meetinng.AspNetCore 项目

--- a/TubumuMeeting.Meeting.Web/TubumuMeeting.Meeting.Web.csproj
+++ b/TubumuMeeting.Meeting.Web/TubumuMeeting.Meeting.Web.csproj
@@ -13,7 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\TubumuMeeting.Mediasoup\TubumuMeeting.Mediasoup.csproj" />
-    <ProjectReference Include="..\TubumuMeeting.Meeting.AspNetCore\TubumuMeeting.Meeting.AspNetCore.csproj" />
+    <ProjectReference Include="..\TubumuMeeting.Meeting.Server\TubumuMeeting.Meeting.Server.csproj" />
   </ItemGroup>
 
 </Project>
