--- a/TubumuMeeting.Meeting.Server/TubumuMeeting.Meeting.Server.csproj
+++ b/TubumuMeeting.Meeting.Server/TubumuMeeting.Meeting.Server.csproj
@@ -16,6 +16,8 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.5" />
     <PackageReference Include="Nito.AsyncEx.Coordination" Version="5.0.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.6.0" />
+    <PackageReference Include="NLog" Version="4.7.2" />
+    <PackageReference Include="NLog.Web.AspNetCore" Version="4.9.2" />
   </ItemGroup>
 
   <ItemGroup>
