--- a/TubumuMeeting.Meeting.Web/mediasoupsettings.json
+++ b/TubumuMeeting.Meeting.Web/mediasoupsettings.json
@@ -7,7 +7,7 @@
   },
   "MediasoupSettings": {
     "WorkerSettings": {
-      "LogLevel": "debug",
+      "LogLevel": "warn",
       "LogTags": [
         "info",
         "ice",
