--- a/TubumuMeeting.Meeting.Web/appsettings.json
+++ b/TubumuMeeting.Meeting.Web/appsettings.json
@@ -18,6 +18,6 @@
     "LoginUrl": "/login"
   },
   "CorsSettings": {
-    "Origins": [ "https://192.168.0.124:8080" ]
+    "Origins": [ "https://192.168.0.124:8080", "https://192.168.18.233:8080" ]
   }
 }
