--- a/TubumuMeeting.Mediasoup/TubumuMeeting.Mediasoup.csproj
+++ b/TubumuMeeting.Mediasoup/TubumuMeeting.Mediasoup.csproj
@@ -16,7 +16,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="3.1.7" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.7" />
-    <PackageReference Include="Nito.AsyncEx.Coordination" Version="5.0.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Threading" Version="16.7.54" />
   </ItemGroup>
 
   <ItemGroup>
