--- a/TubumuMeeting.Meeting.Web/appsettings.json
+++ b/TubumuMeeting.Meeting.Web/appsettings.json
@@ -6,6 +6,15 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Information"
+      }
+    }
+  },
   "AllowedHosts": "*",
   "TokenValidationSettings": {
     "ValidIssuer": "issuer",
