* Peer.cs: * Startup.cs: * ApiResult.cs: * Scheduler.cs: * MediasoupOptions.cs: * TubumuMeeting.Core.csproj: * mediasoupsettings.json: * MediasoupSettings.cs: * TestController.cs: * TubumuMeeting.Meeting.Web.csproj: * PlainTransportSettings.cs: * TubumuMeeting.GB28181.Server.csproj: * TubumuMeeting.Meeting.Server.csproj: * H264ProfileLevelId.cs: * TubumuMeeting.GB28181.SIPSorcery.csproj: * CreatePlainTransportResult.cs: * CreatePlainTransportRequest.cs:
* Producer.cs: WIP

--- a/TubumuMeeting.GB28181.Server/TubumuMeeting.GB28181.Server.csproj
+++ b/TubumuMeeting.GB28181.Server/TubumuMeeting.GB28181.Server.csproj
@@ -10,8 +10,11 @@
     <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Connections" Version="1.1.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.1" />
     <PackageReference Include="SuperSocket" Version="2.0.0-beta7" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\" />
+  </ItemGroup>
 </Project>
