--- a/TubumuMeeting.GB28181.SIPSorcery/TubumuMeeting.GB28181.SIPSorcery.csproj
+++ b/TubumuMeeting.GB28181.SIPSorcery/TubumuMeeting.GB28181.SIPSorcery.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Connections" Version="1.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.1" />
+    <PackageReference Include="SIPSorcery" Version="5.0.3" />
   </ItemGroup>
 
 </Project>
