--- a/TubumuMeeting.GB28181.Server/TubumuMeeting.GB28181.Server.csproj
+++ b/TubumuMeeting.GB28181.Server/TubumuMeeting.GB28181.Server.csproj
@@ -11,10 +11,13 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Connections" Version="1.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.1" />
-    <PackageReference Include="SuperSocket" Version="2.0.0-beta7" />
+    <PackageReference Include="SIPSorcery" Version="5.0.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Models\" />
+    <Folder Include="Microsoft\AspNetCore\Builder\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\TubumuMeeting.GB28181.SIPSorcery\TubumuMeeting.GB28181.SIPSorcery.csproj" />
   </ItemGroup>
 </Project>
