--- a/Tubumu.GB28181.Server/Tubumu.GB28181.Server.csproj
+++ b/Tubumu.GB28181.Server/Tubumu.GB28181.Server.csproj
@@ -18,7 +18,7 @@
     <Folder Include="Microsoft\AspNetCore\Builder\" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\Tubumu.Core\Tubumu.Core.csproj" />
     <ProjectReference Include="..\Tubumu.GB28181\Tubumu.GB28181.csproj" />
-    <ProjectReference Include="..\Tubumu.Core\Tubumu.Core.csproj" />
   </ItemGroup>
 </Project>
