--- a/Tubumu.Web/mediasoupsettings.json
+++ b/Tubumu.Web/mediasoupsettings.json
@@ -14,10 +14,10 @@
       "LogTags": [
         "info",
         "ice",
-        "dtls",
-        "rtp",
-        "srtp",
-        "rtcp",
+        //"dtls",
+        //"rtp",
+        //"srtp",
+        //"rtcp",
         "rtx",
         "bwe",
         "score",
