--- a/Tubumu.Meeting.Client.WPF/Tubumu.Meeting.Client.WPF.csproj
+++ b/Tubumu.Meeting.Client.WPF/Tubumu.Meeting.Client.WPF.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UseWPF>true</UseWPF>
     <Platforms>AnyCPU;x86</Platforms>
+    <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
 
   <ItemGroup>
