--- a/Tubumu.Meeting.Client.WPF/Tubumu.Meeting.Client.WPF.csproj
+++ b/Tubumu.Meeting.Client.WPF/Tubumu.Meeting.Client.WPF.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
     <Platforms>AnyCPU;x86</Platforms>
     <UseWindowsForms>true</UseWindowsForms>
