--- a/Tubumu.Web/mediasoupsettings.json
+++ b/Tubumu.Web/mediasoupsettings.json
@@ -87,7 +87,7 @@
       "ListenIps": [
         {
           "Ip": "0.0.0.0",
-          "AnnouncedIp": "192.168.3.66"
+          "AnnouncedIp": null
         }
       ],
       "InitialAvailableOutgoingBitrate": 1000000,
