--- a/Tubumu.Web/Tubumu.Web.csproj
+++ b/Tubumu.Web/Tubumu.Web.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>net5.0</TargetFramework>
     <Nullable>enable</Nullable>
     <EnableUnsafeBinaryFormatterSerialization>true</EnableUnsafeBinaryFormatterSerialization>
+    <DockerComposeProjectPath>../docker-compose.dcproj</DockerComposeProjectPath>
+    <UserSecretsId>3f57799d-6043-4eb3-a4a1-90aceae86f9c</UserSecretsId>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'Tubumu.Meeting.Web' " />
@@ -30,7 +32,4 @@
     <ProjectReference Include="..\..\Tubumu.Meeting.Server.Consul\Tubumu.Meeting.Server.Consul.csproj" />
   </ItemGroup>
 
-  <ItemGroup>
-    <None Remove="Swashbuckle.AspNetCore" />
-  </ItemGroup>
 </Project>
