--- a/Tubumu.Web/Dockerfile
+++ b/Tubumu.Web/Dockerfile
@@ -7,18 +7,8 @@ EXPOSE 20000-29999
 
 FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
 WORKDIR /src
-COPY ["Tubumu.Web/Tubumu.Web.csproj", "Tubumu.Web/"]
-COPY ["../Tubumu.Core/Tubumu.Core.csproj", "../Tubumu.Core/"]
-COPY ["../Tubumu.Mediasoup/Tubumu.Mediasoup.csproj", "../Tubumu.Mediasoup/"]
-COPY ["../Tubumu.Mediasoup.Common/Tubumu.Mediasoup.Common.csproj", "../Tubumu.Mediasoup.Common/"]
-COPY ["../Tubumu.Libuv/Tubumu.Libuv.csproj", "../Tubumu.Libuv/"]
-COPY ["../Tubumu.Mediasoup.AspNetCore/Tubumu.Mediasoup.AspNetCore.csproj", "../Tubumu.Mediasoup.AspNetCore/"]
-COPY ["../Tubumu.Mediasoup.Executable/Tubumu.Mediasoup.Executable.csproj", "../Tubumu.Mediasoup.Executable/"]
-COPY ["../Tubumu.Meeting.Server/Tubumu.Meeting.Server.csproj", "../Tubumu.Meeting.Server/"]
-COPY ["../Tubumu.Meeting.Server.Consul/Tubumu.Meeting.Server.Consul.csproj", "../Tubumu.Meeting.Server.Consul/"]
-RUN dotnet restore "Tubumu.Web/Tubumu.Web.csproj"
 COPY . .
-WORKDIR "/src/Tubumu.Web"
+RUN dotnet restore "Tubumu.Web.csproj"
 RUN dotnet build "Tubumu.Web.csproj" -c Release -o /app/build
 
 FROM build AS publish
