--- a/Tubumu.Web/Tubumu.Web.csproj
+++ b/Tubumu.Web/Tubumu.Web.csproj
@@ -22,13 +22,23 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.5" />
   </ItemGroup>
 
-  <ItemGroup>
+  <ItemGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <ProjectReference Include="..\..\Tubumu.Core\Tubumu.Core.csproj" />
     <ProjectReference Include="..\..\Tubumu.Mediasoup\Tubumu.Mediasoup.csproj" />
     <ProjectReference Include="..\..\Tubumu.Mediasoup.AspNetCore\Tubumu.Mediasoup.AspNetCore.csproj" />
     <ProjectReference Include="..\..\Tubumu.Mediasoup.Executable\Tubumu.Mediasoup.Executable.csproj" />
     <ProjectReference Include="..\..\Tubumu.Meeting.Server\Tubumu.Meeting.Server.csproj" />
     <ProjectReference Include="..\..\Tubumu.Meeting.Server.Consul\Tubumu.Meeting.Server.Consul.csproj" />
+  </ItemGroup>
+
+  <ItemGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PackageReference Include="Tubumu.Core" Version="3.2.0" />
+    <PackageReference Include="Tubumu.Mediasoup" Version="3.2.0" />
+    <PackageReference Include="Tubumu.Mediasoup.Common" Version="3.2.0" />
+    <PackageReference Include="Tubumu.Mediasoup.AspNetCore" Version="3.2.0" />
+    <PackageReference Include="Tubumu.Mediasoup.Executable" Version="3.2.0" />
+    <PackageReference Include="Tubumu.Meeting.Server" Version="3.2.0" />
+    <PackageReference Include="Tubumu.Meeting.Server.Consul" Version="3.2.0" />
   </ItemGroup>
 
 </Project>
