--- a/Tubumu.Web/mediasoupsettings.json
+++ b/Tubumu.Web/mediasoupsettings.json
@@ -105,6 +105,6 @@
     }
   },
   "MeetingServerSettings": {
-    "ServeMode": "Open" // Open,Invite,Pull
+    "ServeMode": "Invite" // Open,Invite,Pull
   }
 }
