--- a/tubumu-meeting-demo-client/package.json
+++ b/tubumu-meeting-demo-client/package.json
@@ -1,47 +1,46 @@
 {
-    "name": "tubumu-meeting-demo-client",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-        "serve": "vue-cli-service --https true serve ",
-        "build": "vue-cli-service build",
-        "lint": "vue-cli-service lint"
+  "name": "tubumu-meeting-demo-client",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
+  },
+  "dependencies": {
+    "@microsoft/signalr": "^5.0.9",
+    "core-js": "^3.6.5",
+    "element-ui": "^2.15.5",
+    "mediasoup-client": "^3.6.37",
+    "vue": "^2.6.11"
+  },
+  "devDependencies": {
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-vue": "^6.2.2",
+    "vue-loader": "^15.9.8",
+    "vue-template-compiler": "^2.6.11"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
     },
-    "dependencies": {
-        "@microsoft/signalr": "^3.1.3",
-        "core-js": "^3.6.4",
-        "element-ui": "^2.4.5",
-        "mediasoup-client": "^3.6.12",
-        "querystring": "^0.2.0",
-        "vue": "^2.6.11",
-        "vue-loader": "^15.9.1",
-        "vue-template-compiler": "^2.6.11"
+    "extends": [
+      "plugin:vue/essential",
+      "eslint:recommended"
+    ],
+    "parserOptions": {
+      "parser": "babel-eslint"
     },
-    "devDependencies": {
-        "@vue/cli-plugin-babel": "~4.4.0",
-        "@vue/cli-plugin-eslint": "~4.4.0",
-        "@vue/cli-service": "~4.4.0",
-        "babel-eslint": "^10.1.0",
-        "eslint": "7.2.0",
-        "eslint-plugin-vue": "^6.2.2"
-    },
-    "eslintConfig": {
-        "root": true,
-        "env": {
-            "node": true
-        },
-        "extends": [
-            "plugin:vue/essential",
-            "eslint:recommended"
-        ],
-        "parserOptions": {
-            "parser": "babel-eslint"
-        },
-        "rules": {}
-    },
-    "browserslist": [
-        "> 1%",
-        "last 2 versions",
-        "not dead"
-    ]
+    "rules": {}
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead"
+  ]
 }
