--- a/Tubumu.Meeting.Client.WPF/Tubumu.Meeting.Client.WPF.csproj
+++ b/Tubumu.Meeting.Client.WPF/Tubumu.Meeting.Client.WPF.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
     <Platforms>AnyCPU;x86</Platforms>
@@ -11,7 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="System.Text.Encodings.Web" Version="5.0.0" />
-    <PackageReference Include="System.Text.Json" Version="5.0.1" />
+    <PackageReference Include="System.Text.Json" Version="5.0.2" />
   </ItemGroup>
 
   <ItemGroup>
