Rename project `Tubumu.Core` to `Tubumu.Utils`.

--- a/Tubumu.Meeting.Client.WPF/Tubumu.Meeting.Client.WPF.csproj
+++ b/Tubumu.Meeting.Client.WPF/Tubumu.Meeting.Client.WPF.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Tubumu.Core\Tubumu.Core.csproj" />
+    <ProjectReference Include="..\..\Tubumu.Utils\Tubumu.Utils.csproj" />
     <ProjectReference Include="..\..\Tubumu.Mediasoup.Common\Tubumu.Mediasoup.Common.csproj" />
   </ItemGroup>
 
