--- a/Tubumu.Web/Properties/launchSettings.json
+++ b/Tubumu.Web/Properties/launchSettings.json
@@ -20,7 +20,8 @@
       "launchBrowser": false,
       "applicationUrl": "",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "DYLD_LIBRARY_PATH": "/opt/homebrew/Cellar/libuv/1.44.1/lib"
       }
     }
   }
