--- a/Tubumu.Web/mediasoupsettings.example.json
+++ b/Tubumu.Web/mediasoupsettings.example.json
@@ -1,12 +1,12 @@
-{
+﻿{
   "MediasoupStartupSettings": {
-    "MediasoupVersion": "3.8.2",
+    "MediasoupVersion": "3.9.10",
     "WorkerPath": null, // 指定 mediasoup-worker 路径或引用 Tubumu.Mediasoup.Excultable 包。
     "NumberOfWorkers": null // 如果为 null，则使用 CPU 核心数。
   },
   "MediasoupSettings": {
     "WorkerSettings": {
-      "LogLevel": "debug",
+      "LogLevel": "debug", // debug, warn, error or none 
       "LogTags": [
         "info",
         "ice",
@@ -84,7 +84,7 @@
       "ListenIps": [
         {
           "Ip": "0.0.0.0",
-          // 请改为本机在局域网或公网的 IP。
+          // 请改为本机在局域网或公网的 IP。如果不提供，则会尝试获取本机在局域网的 IPv4 地址。
           "AnnouncedIp": null
         }
       ],
@@ -97,13 +97,13 @@
     "PlainTransportSettings": {
       "ListenIp": {
         "Ip": "0.0.0.0",
-        // 请改为本机在局域网或公网的 IP。
+        // 请改为本机在局域网或公网的 IP。如果不提供，则会尝试获取本机在局域网的 IPv4 地址。
         "AnnouncedIp": null
       },
       "MaxSctpMessageSize": 262144
     }
   },
   "MeetingServerSettings": {
-    "ServeMode": "Open" // Open,Invite,Pull
+    "ServeMode": "Open" // Open,Invite or Pull
   }
 }
